@@ -23,53 +23,46 @@ class TestID:
         self.staged = staged_names
         self.idtraits = idtraits
 
-    def computeExecuteDirectory(self, shorten=True):
+    def computeExecuteDirectory(self):
         ""
-        bname = self.name
-
-        paramL = self._get_parameters_as_list( compress_stage=True )
-        if len( paramL ) > 0:
-            bname += '.' + '.'.join(paramL)
-
-        if shorten:
-            bname = self._compute_shortened_name( bname )
-
-        dname = dirname( self.filepath )
-
-        return normpath( pjoin( dname, bname ) )
+        paramL = self._get_parameters( compress_stage=True )
+        return self._compute_execute_path( paramL )
 
     def computeDisplayString(self):
         ""
-        displ = self.computeExecuteDirectory( shorten=False )
-
-        if self.staged:
-
-            stage_name = self.staged[0]
-            param_names = self.staged[1:]
-
-            paramL = list( param_names )
-            paramL.sort()
-            pL = []
-            for param in paramL:
-                pL.append( param+'='+self.params[param] )
-
-            displ += ' ' + stage_name+'='+self.params[stage_name]
-            displ += '('+','.join( pL )+')'
+        paramL = self._get_parameters( compress_stage=True, compress_hidden=True )
+        displ = self._compute_execute_path( paramL, shorten=False )
+        displ += self._get_staging_suffix()
 
         return displ
 
     def computeID(self, compress_stage=False):
         ""
         lst = [ self.filepath, self.name ]
-        lst.extend( self._get_parameters_as_list( compress_stage ) )
+        lst.extend( self._get_parameters( compress_stage ) )
         return tuple( lst )
 
-    def _get_parameters_as_list(self, compress_stage):
+    def executeDirectoryIsShortened(self):
+        ""
+        paramL = self._get_parameters( compress_stage=True )
+        xdir1 = self._compute_execute_path( paramL, shorten=True )
+        xdir2 = self._compute_execute_path( paramL, shorten=False )
+
+        return xdir1 != xdir2
+
+    def computeMatchString(self):
+        ""
+        paramL = self._get_parameters( compress_stage=True, compress_hidden=False )
+        displ = self._compute_execute_path( paramL, shorten=False )
+        displ += self._get_staging_suffix()
+        return displ
+
+    def _get_parameters(self, compress_stage, compress_hidden=True):
         ""
         L = []
         if len( self.params ) > 0:
             for n,v in self.params.items():
-                if self._hide_parameter( n, compress_stage ):
+                if self._hide_parameter( n, compress_stage, compress_hidden ):
                     pass
                 elif self._compress_parameter( n, compress_stage ):
                     L.append( n )
@@ -80,14 +73,29 @@ class TestID:
             if len(L) == 0:
                 # can only happen with minxdirs; it is a bit of a hack, but
                 # a single empty string will result in an execute directory
-                # that is distinguishable from an analyze test
+                # that is distinguishable from an analyze test (it will have
+                # a trailing dot)
                 L.append('')
 
         return L
 
-    def _hide_parameter(self, param_name, compress_stage):
+    def _compute_execute_path(self, paramlist, shorten=True):
         ""
-        if param_name in self.idtraits.get('minxdirs',[]):
+        bname = self.name
+
+        if len( paramlist ) > 0:
+            bname += '.' + '.'.join(paramlist)
+
+        if shorten:
+            bname = self._compute_shortened_name( bname )
+
+        path = normpath( pjoin( dirname( self.filepath ), bname ) )
+
+        return path
+
+    def _hide_parameter(self, param_name, compress_stage, compress_hidden):
+        ""
+        if compress_hidden and (param_name in self.idtraits.get('minxdirs',[])):
             return True
         elif compress_stage and self.staged:
             return param_name == self.staged[0]
@@ -110,6 +118,26 @@ class TestID:
             return self.name[:20] + '.' + hsh
         else:
             return fullname
+
+    def _get_staging_suffix(self):
+        ""
+        sfx = ''
+
+        if self.staged:
+
+            stage_name = self.staged[0]
+            param_names = self.staged[1:]
+
+            paramL = list( param_names )
+            paramL.sort()
+            pL = []
+            for param in paramL:
+                pL.append( param+'='+self.params[param] )
+
+            sfx = ' ' + stage_name+'='+self.params[stage_name]
+            sfx += '('+','.join( pL )+')'
+
+        return sfx
 
 
 if sys.version_info[0] < 3:
